--- a/Reblex/index.html
+++ b/Reblex/index.html
@@ -1,1 +1,1 @@
-<html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">keyFKJAOFjpq</pre></body></html>
+<html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">you link is: https://pastebin.com/raw/7sWJ9Phf</pre></body></html>
